2003-10-07  Pavel Roskin  <proski@gnu.org>

	* direntry.c: Make functions static when possible.
	* xdirentry.h: Remove unneeded declarations.

2003-09-28  Pavel Roskin  <proski@gnu.org>

	* vfs.c (vfs_type_from_op): Check if vfs->prefix is NULL before
	calling strlen() on it.
	(vfs_strip_suffix_from_filename): Likewise.
	(mc_chdir): Don't panic if no chdir function is defined.  This
	fixes "cd #gz".

2003-09-23  Pavel Roskin  <proski@gnu.org>

	* vfs.c (vfs_canon): Remove tilde expansion.  mc_chdir() should
	act like chdir() of localfs, which doesn't expand tilde.
	Reported by Doncho Gunchev <mr700@globalnet.bg>

2003-09-22  Pavel Roskin  <proski@gnu.org>

	* vfs.c (mc_get_current_wd): Use g_strlcpy() to avoid unneeded
	padding and silence Valgrind.

2003-09-09  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* samba/libsmb/namequery.c (_interpret_node_status): Comment
	out.

2003-09-03  Pavel Roskin  <proski@gnu.org>

	* samba/include/charset.h: Remove declaration already present in
	proto.h.
	* samba/include/proto.h: Run through uniq.

2003-08-30  Pavel Roskin  <proski@gnu.org>

	* samba/tests/summary.c: Remove.  The test is now included ...
	* samba/configure.in: ... here.
	* samba/tests/README: Remove, it's irrelevant.
	* samba/architecture.doc: Likewise.
	* samba/include/dlinklist.h: Remove, it's unused.  Adjust
	dependencies.
	* samba/libsmb/namequery.c (): Remove, it's unused.
	* Makefile.am: Remove unused Samba files.

	* samba/include/smb.h: Remove unneeded includes.
	* samba/include/ntdomain.h: Remove, it's unused.
	* samba/include/rpc*.h: Likewise.
	* samba/lib/util_unistr.c: Remove unused code.
	* samba/include/proto.h: Regenerate.
	* Makefile.am: Remove unused Samba headers.

2003-08-29  Pavel Roskin  <proski@gnu.org>

	* samba/lib/system.c: Remove all unused code.
	* samba/include/proto.h: Remove some unused prototypes.
	* samba/include/includes.h: Don't include sys/capability.h,
	it's not needed.
	* samba/configure.in: Remove tests for capabilities and groups,